# csvfmt

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/lib/: content_reader.rs  formatter.rs  mod.rs
src/main/: args_parser.rs  mod.rs
tests/: integration_tests.rs
